[gd_scene load_steps=4 format=3 uid="uid://bgrsemp5dhpfs"]

[ext_resource type="Script" path="res://UI/HUD/HUD.gd" id="1_55ceo"]
[ext_resource type="Texture2D" uid="uid://nklunu0usfjl" path="res://assets/sprites/ui/bg-panel-big.png" id="2_ld5mq"]
[ext_resource type="FontFile" uid="uid://dbjl1e6kdxpl6" path="res://assets/fonts/PixelOperator8.ttf" id="4_c3tt3"]

[node name="Hud" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_55ceo")

[node name="PauseMenu" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(440, 360)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -180.0
offset_right = 220.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ld5mq")
region_rect = Rect2(0, 0, 124, 124)
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 0
offset_top = 30.0
offset_right = 440.0
offset_bottom = 330.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NewGame" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_c3tt3")
theme_override_font_sizes/font_size = 48
text = "New Game"

[node name="VSplitContainer" type="VSplitContainer" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Resume" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_c3tt3")
theme_override_font_sizes/font_size = 48
text = "Resume"

[node name="VSplitContainer2" type="VSplitContainer" parent="PauseMenu/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Exit" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_c3tt3")
theme_override_font_sizes/font_size = 48
text = "Exit"

[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer3/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer2/Exit" to="." method="_on_exit_pressed"]
